spelling & sizing errors

--- a/fccPortfolio/index.html
+++ b/fccPortfolio/index.html
@@ -64,7 +64,7 @@
                     <div class="project-image python-ml-img"></div>
                     <h4 class="project-title">Machine Learning (Python)</h4>
                     <p class="project-text">This repository contains my homework & 
-                        projects, from  part of Simplilearn's AL/ML course.
+                        projects, from Simplilearn's AL/ML course.
                     </p>
                     <a class="project-btn" href="https://github.com/godoshian/AI_ML" 
                     target="_blank">GitHub Link</a>
@@ -111,14 +111,14 @@
             <h3>Skills: Java, Python, HTML, CSS, JavaScript.</h3>
             <p>My native language is (American) English,
                 and I have experience working in environments 
-                where English is a a second language.
-                Additionally, I have a working knowledge of Russian.
-                And basic knowledge of German, Georgian, Swedish, and Ukrainian.
+                where English is a second language.
+                <br>Additionally, I have a working knowledge of Russian.
+                <br>And basic knowledge of German, Georgian, Swedish, and Ukrainian.
             </p>
 
             <h3><a id="profile-link" class=general-link href="https://github.com/godoshian"
                 target="_blank">Please follow this link and contact me via GitHub,
-                if you're interesting in working with me.</a>
+                if you're interested in working with me.</a>
             </h3>
             </div>
 
